This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

26/04/2007
- Fixed q3map2 lightbounce bug (by Unknown)

26/04/2007
- Fixed another texcompression bug

25/04/2007
- Fixed texcompression beeing disabled after each restart
- Fixed gtk-searchpopup in treeviews

15/04/2007
namespace
- Fixed brushexport2 output float-format (Shaderman)

27/03/2007
namespace
- Fix: Added missing xml-writer pop-calls
- Ported mapxml plugin to Doom3
- mapxml now exports brushes with its vertices

19/03/2007
namespace
- Fix: Selection is now deleted when creating a patch out of it (aumüller / namespace)

08/03/2007
namespace
- Win32 compile fix (woekele)

07/03/2007
namespace
- Updated UFA:Plugin (mattn2)

04/03/2007
namespace
- Reverted Q3 translucency fix since it randomly made brushes
  fully transparent in Doom3 mode.

04/03/2007
namespace
- Final update for installerfiles (Shaderman / namespace)
- Removed installer.py validation checks since they are incompatible with Vista
- Updated msiquery module to python 2.5
- Added msiquery module for python 2.5

03/03/2007
namespace
(THIS IS A TRANSITIONAL REVISION, DO NOT USE, WAIT FOR UPDATED DEPS)
- Fixed weird msvcrt bugs caused by dbghelp.dll
- Activated new radiant icon on Linux (Topsun)
- First update for installerfiles (Shaderman)
- New MODT for q3map2 :)
- tiny changes

28/02/2007
namespace
- Radiant is now Vista compatible (Aero must be disabled)
- Updated all radiant dependencies (gtk is now 2-2.10)
  New dependency packages can be found here
http://zerowing.idsoftware.com/files/radiant/developer/1.5/gtkradiant-1.5-dependencies-1.0.zip
  or here
http://www.codecreator.net/radiant/gtkradiant-1.5-dependencies-1.0.zip
- Removed Win32 filechooser
   - Fixes crashes caused by utf-8 encoded filenames
   - Fixes Vista "SaveAs"-Bug
- Converted all projects to Visual Studio 2005
- Codefixes for vc2k5 compiler
- Removed old unused projectfiles for Visual Studio 6